--- a/Index 4.html
+++ b/Index 4.html
@@ -41,7 +41,7 @@
                     var link = document.createElement('a');
                     
                     // Đặt thuộc tính href cho thẻ <a> (URL mà bạn muốn mở khi click)
-                    link.href = 'https://www.google.com/'; // Thay đổi URL tùy theo nhu cầu của bạn                 
+                    link.href = 'https://quynhnguyenepi.github.io/cross-checking2/Index.html'; // Thay đổi URL tùy theo nhu cầu của bạn                 
                     
                     // Đặt nội dung văn bản của thẻ <a> giống với nội dung thẻ <p>
                     link.textContent = paragraph.textContent;
